Styling the PokeList component  - Creating Services

--- a/FrontEnd/src/app/shared/poke-list/poke-list.component.html
+++ b/FrontEnd/src/app/shared/poke-list/poke-list.component.html
@@ -1,1 +1,47 @@
-<p>poke-list works!</p>
+<a class="pokemon">
+    <section class="pokemon__image">
+        <img  src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" 
+        alt="Bulbasaur">
+    </section>
+    
+    <section class="pokemon__status">
+        <p>Nº001</p>
+    <h2>Bulbasaur</h2>
+    <ul>
+        <li>Grass</li>
+        <li>Poison</li>
+    </ul>
+    </section>
+</a>
+
+<a class="pokemon">
+    <section class="pokemon__image">
+        <img  src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" 
+        alt="Bulbasaur">
+    </section>
+    
+    <section class="pokemon__status">
+        <p>Nº001</p>
+    <h2>Bulbasaur</h2>
+    <ul>
+        <li>Grass</li>
+        <li>Poison</li>
+    </ul>
+    </section>
+</a>
+
+<a class="pokemon">
+    <section class="pokemon__image">
+        <img  src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" 
+        alt="Bulbasaur">
+    </section>
+    
+    <section class="pokemon__status">
+        <p>Nº001</p>
+    <h2>Bulbasaur</h2>
+    <ul>
+        <li>Grass</li>
+        <li>Poison</li>
+    </ul>
+    </section>
+</a>
