Entendendo a API do PokeAPI  - Criando o método apiListAllPokemons  - Importando o serviço apiListAllPokemons  - Aperfeiçoando o serviço

--- a/FrontEnd/src/app/shared/poke-list/poke-list.component.scss
+++ b/FrontEnd/src/app/shared/poke-list/poke-list.component.scss
@@ -3,6 +3,10 @@
 :host{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    
+    padding: 0;
+
     .pokemon{
         display: flex;
         flex-direction: column;
