--- a/FrontEnd/src/app/shared/poke-list/poke-list.component.html
+++ b/FrontEnd/src/app/shared/poke-list/poke-list.component.html
@@ -1,63 +1,24 @@
-<a class="pokemon">
-    <section class="pokemon__image">
-        <img  src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" 
-        alt="Bulbasaur">
-    </section>
-    
-    <section class="pokemon__status">
-        <p>Nº001</p>
-    <h2>Bulbasaur</h2>
-    <ul>
-        <li>Grass</li>
-        <li>Poison</li>
-    </ul>
-    </section>
-</a>
-
-<a class="pokemon">
-    <section class="pokemon__image">
-        <img  src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" 
-        alt="Bulbasaur">
-    </section>
-    
-    <section class="pokemon__status">
-        <p>Nº001</p>
-    <h2>Bulbasaur</h2>
-    <ul>
-        <li>Grass</li>
-        <li>Poison</li>
-    </ul>
-    </section>
-</a>
-
-<a class="pokemon">
-    <section class="pokemon__image">
-        <img  src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" 
-        alt="Bulbasaur">
-    </section>
-    
-    <section class="pokemon__status">
-        <p>Nº001</p>
-    <h2>Bulbasaur</h2>
-    <ul>
-        <li>Grass</li>
-        <li>Poison</li>
-    </ul>
-    </section>
-</a>
-
-<a class="pokemon">
-    <section class="pokemon__image">
-        <img  src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" 
-        alt="Bulbasaur">
-    </section>
-    
-    <section class="pokemon__status">
-        <p>Nº001</p>
-    <h2>Bulbasaur</h2>
-    <ul>
-        <li>Grass</li>
-        <li>Poison</li>
-    </ul>
-    </section>
-</a>
+<ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
+    <a class="pokemon" *ngIf="pokemon.status">
+        <section class="pokemon__image">
+            <img  
+                [src]="pokemon.status.sprites.front_default" 
+                alt="pokemon.name"
+            >
+        </section>
+        
+        <section class="pokemon__status">
+            <p>
+                Nº {{ zero(pokemon.status.id) }}
+            </p>
+            <h2>
+                {{ pokemon.name }}
+            </h2>
+        <ul>
+            <li *ngFor="let value of pokemon.status.types">
+                {{ value.type.name }}
+            </li>
+        </ul>
+        </section>
+    </a>
+</ng-template>
