--- a/FrontEnd/src/app/shared/poke-list/poke-list.component.html
+++ b/FrontEnd/src/app/shared/poke-list/poke-list.component.html
@@ -1,5 +1,5 @@
 <ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
-    <a class="pokemon" *ngIf="pokemon.status">
+    <a [routerLink]="['details', pokemon.status.id]" class="pokemon" *ngIf="pokemon.status">
         <section class="pokemon__image">
             <img  
                 [src]="pokemon.status.sprites.front_default" 
