--- a/FrontEnd/src/app/shared/poke-list/poke-list.component.scss
+++ b/FrontEnd/src/app/shared/poke-list/poke-list.component.scss
@@ -1,69 +1,71 @@
 @import '../../../config-scss/rem-calc.scss';
 
 :host{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 0;
-
-    .pokemon{
+    .listagem{
         display: flex;
-        flex-direction: column;
-        width: calc(30% - 20px);
-        height: rem-calc(400 -20px);
-        padding: rem-calc(20);
-        border-radius: rem-calc(30);
-        margin-top: rem-calc(20);
-        text-decoration: none;
-        color: #D9D9D9;
-        
-        /* From https://css.glass */
-        background: rgba(255, 255, 255, 0.25);
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
-        
+        justify-content: space-between;
+        flex-wrap: wrap;
+        padding: 0;
 
-        &__status{
-            p{
-                font-size: rem-calc(18);
-                margin-bottom: rem-calc(10);
-            }
+        .pokemon{
+            display: flex;
+            flex-direction: column;
+            width: calc(30% - 20px);
+            height: rem-calc(400 -20px);
+            padding: rem-calc(20);
+            border-radius: rem-calc(30);
+            margin-top: rem-calc(20);
+            text-decoration: none;
+            color: #D9D9D9;
+            
+            /* From https://css.glass */
+            background: rgba(255, 255, 255, 0.25);
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(5px);
+            -webkit-backdrop-filter: blur(5px);
+            
 
-            h2{
-                font-size: 20pt;
-                font-style: italic;
-                font-weight: bold;
-                margin-bottom: rem-calc(10);
-                text-transform: capitalize;
-            }
-
-            ul{
-                display: flex;
-                
-                li{
-                    background: var(--secondary-color);
+            &__status{
+                p{
                     font-size: rem-calc(18);
+                    margin-bottom: rem-calc(10);
+                }
+
+                h2{
+                    font-size: 20pt;
+                    font-style: italic;
+                    font-weight: bold;
+                    margin-bottom: rem-calc(10);
+                    text-transform: capitalize;
+                }
+
+                ul{
                     display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    border-radius: rem-calc(50);
-                    width: rem-calc(100);
-                    height: rem-calc(25);
-                    margin-right: rem-calc(10);
+                    
+                    li{
+                        background: var(--secondary-color);
+                        font-size: rem-calc(18);
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        border-radius: rem-calc(50);
+                        width: rem-calc(100);
+                        height: rem-calc(25);
+                        margin-right: rem-calc(10);
+                    }
                 }
             }
-        }
 
-        &__image{
-            top: rem-calc(20);
-            
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            &__image{
+                top: rem-calc(20);
+                
+                display: flex;
+                align-items: center;
+                justify-content: center;
 
-            img{
-                width: rem-calc(300);
+                img{
+                    width: rem-calc(300);
+                }
             }
         }
     }
