--- a/FrontEnd/src/app/shared/poke-search/poke-search.component.html
+++ b/FrontEnd/src/app/shared/poke-search/poke-search.component.html
@@ -1,4 +1,4 @@
 <form>
-    <input type="text" placeholder="Buscar Pokemon...">
+    <input type="text" #input (keyup)="search(input.value)" placeholder="Buscar Pokemon...">
     <img src="assets/Busca.svg" alt="Busca">
 </form>
