--- a/FrontEnd/src/app/shared/poke-list/poke-list.component.html
+++ b/FrontEnd/src/app/shared/poke-list/poke-list.component.html
@@ -1,4 +1,4 @@
-<poke-search (emmitSearch)=""></poke-search>
+<poke-search (emmitSearch)="getSearch($event)"></poke-search>
 
 <section class="listagem">
     <ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
