Estilo da página de details - Estilo de botões

--- a/FrontEnd/src/app/shared/poke-header/poke-header.component.scss
+++ b/FrontEnd/src/app/shared/poke-header/poke-header.component.scss
@@ -10,6 +10,6 @@
         font-size: 45pt;
         font-weight: bold;
         font-style: italic;
-        color: #ffffff;
+        color: var(--branco);
     }
 }
