--- a/FrontEnd/src/app/shared/poke-list/poke-list.component.scss
+++ b/FrontEnd/src/app/shared/poke-list/poke-list.component.scss
@@ -16,7 +16,7 @@
             border-radius: rem-calc(30);
             margin-top: rem-calc(20);
             text-decoration: none;
-            color: #D9D9D9;
+            color: var(--branco);
             
             /* From https://css.glass */
             background: rgba(255, 255, 255, 0.25);
