--- a/FrontEnd/src/app/shared/poke-list/poke-list.component.html
+++ b/FrontEnd/src/app/shared/poke-list/poke-list.component.html
@@ -26,4 +26,9 @@
         </a>
     </ng-template>
 </section>
-
+<img 
+    src="assets/error.svg" 
+    alt="error"
+    width="100%"
+    *ngIf="apiError"
+>
