--- a/FrontEnd/src/app/shared/poke-list/poke-list.component.scss
+++ b/FrontEnd/src/app/shared/poke-list/poke-list.component.scss
@@ -52,6 +52,7 @@
                         width: rem-calc(100);
                         height: rem-calc(25);
                         margin-right: rem-calc(10);
+                        font-weight: 600;
                     }
                 }
             }
