--- a/FrontEnd/src/config-scss/variables.scss
+++ b/FrontEnd/src/config-scss/variables.scss
@@ -1,5 +1,5 @@
 :root{
     --primary-color: #2D2A32;
-    --secondary-color: #C20114;
+    --secondary-color: rgba(195, 1, 20, 0.75);
     --branco: #D9D9D9;
 }
